# OpenOCDRTT

./: .gitignore  CMakeLists.txt  README.md
OpenOCDRTT/: openocdrtt.c  openocdrtt.h  openocdrtt_config.h
examples/NUCLEO_L476/mbed/: main.cpp
tests/fuzz/: main.cpp
tests/unit/: test.cpp
